--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <li><a href="conf/etc/pro.html">other properties for input, ta, sel...</a></li>
     <li><a href="conf/etc/foex.html">form example</a></li>
   </ul>
+
+  <a href="learn/index.html">ㅇㅇㅇ</a>
+  <a href="learn2/index.html">ㅇㅇㅇ</a>
 </body>
 
 </html>
